# coqueiral-fastapi

./: .coverage  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
coqueiral_fastapi/: hello_world.py
coqueiral_fastapi/app/auth_service/: Dockerfile  initial_data.py  main.py
coqueiral_fastapi/app/auth_service/api/: auth.py
coqueiral_fastapi/app/auth_service/core/: config.py  security.py
coqueiral_fastapi/app/auth_service/models/: user.py
coqueiral_fastapi/app/auth_service/schemas/: user.py
coqueiral_fastapi/app/order_service/: Dockerfile  initial_data.py  main.py  requirements.txt
coqueiral_fastapi/app/order_service/api/: order.py  payment.py
coqueiral_fastapi/app/order_service/core/: config.py
coqueiral_fastapi/app/order_service/models/: order.py
coqueiral_fastapi/app/order_service/schemas/: order.py
coqueiral_fastapi/app/product_service/: Dockerfile  initial_data.py  main.py
coqueiral_fastapi/app/product_service/api/: product.py
coqueiral_fastapi/app/product_service/core/: config.py
coqueiral_fastapi/app/product_service/models/: product.py
coqueiral_fastapi/app/product_service/schemas/: product.py
coqueiral_fastapi/auth_service/app/: initial_data.py  main.py
frontend/: .env  Dockerfile  nginx.conf
frontend/src/: App.js
frontend/src/components/: Carrinho.js  CatalogoProdutos.js  CriarProdutoModal.js  DetalhesProduto.js  EditarProdutoModal.js  LandingPage.js  Login.js  Produtos.js  ProtectedRoute.js  Registrar.js
frontend/src/services/: authService.js  cartService.js  productService.js
tests/: test_hello_world.py
(+5 files in other folders)
